--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
   </head>
 
   <body>
+	<nav>
+		<div class="nav-wrapper cyan darken-1 white-text">
+			<div class="container">
+				<div class="row">
+					<span class="brand-logo">Final</span>
+				</div>
+			</div>
+		</div>
+	</nav>
+  
 	<div class="container">
 		<my-app>
 			<div class="row">
