--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css" media="screen,projection"/>
+    <script src="https://use.fontawesome.com/f6fa66a12a.js"></script>
 	
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
