--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css" media="screen,projection"/>
     <script src="https://use.fontawesome.com/f6fa66a12a.js"></script>
 	
+    <!-- Nikhil Lines -->
+    <script src="lines/snap.svg-min.js"></script>
+  
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 	
