--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	
     <!-- Nikhil Lines -->
     <script src="lines/snap.svg-min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
